# TapTempo

./: .gitignore  Default.hs  I18N.hs  LICENCE  Main.hs  README.md  TapTempo.cabal  TapTempo.hs  Version.hs  default.nix
BrainFuck/: Bf.hs  BfMain.hs  README.md  TapTempoBF.hs  default.nix
messages/: en.msg  fr.msg
src/: Default.hs  I18N.hs  Main.hs  Model.hs  TapTempo.hs
